# sample-project

./: .env.example  README.md  docker-compose.yml  pyproject.toml  pytest.ini
docs/: DBOS - Pydantic AI.md  Overview - Pydantic AI.md  Prefect - Pydantic AI.md  Temporal - Pydantic AI.md  pydantic_ai_best_practices.md  pydanticai_project_structure_guide.md
pydantic-ai-learning/: README.md  pyproject.toml
pydantic-ai-learning/backend/app/: main.py  settings.py  worker.py
pydantic-ai-learning/backend/app/lessons/: lesson1_temporal_basics.py  lesson2_deep_research.py  lesson3_human_loop.py
pydantic-ai-learning/frontend/: app.js  index.html  style.css
pydantic-ai-learning/tests/: conftest.py  test_lessons.py
src/pydantic_learning/: README.md  __init__.py  __main__.py  cli.py  config.py
src/pydantic_learning/agents/: 01_basic_agent.py  02_agent_with_tools.py  02_structured_output.py  03_agent_with_tools.py  03_multi_agent.py  04_dependency_injection.py  04_durable_dbos.py  05_durable_temporal.py  05_multi_agent_game.py  06_deep_research.py  06_multi_agent_research.py  07_deep_research_dbos.py  07_durable_dbos.py  08_deep_research_temporal.py  08_durable_temporal.py  09_evals.py  09_evaluations.py  __init__.py
tests/: __init__.py  conftest.py  test_agents.py  test_config.py
