[project]
name = "pydantic-ai-learning"
version = "0.1.0"
description = "Learning PydanticAI with Temporal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-ai",
    "pydantic-settings",
    "devtools",
    "temporalio",
    "logfire",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
